--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -51,7 +51,7 @@ android {
 
     buildTypes {
         release {
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
